Fixed word wrap issue with silly long words

--- a/html/files/css/forum.scss
+++ b/html/files/css/forum.scss
@@ -323,6 +323,8 @@
                 padding-top: 2px;
                 padding-right: 2%;
 
+                word-wrap: break-word;
+
                 font-size: 1em;
                 line-height: 1.3em;
 
